@@ -15,21 +15,23 @@ import org.apereo.cas.ticket.refreshtoken.DefaultRefreshTokenFactory;
 import org.apereo.cas.ticket.support.AlwaysExpiresExpirationPolicy;
 import org.apereo.cas.util.CollectionUtils;
 
+import lombok.SneakyThrows;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpStatus;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpMethod;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.mock.web.MockHttpSession;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * This class tests the {@link OAuth20AccessTokenEndpointController} class.
@@ -37,15 +39,17 @@ import static org.junit.Assert.*;
  * @author Jerome Leleu
  * @since 3.5.2
  */
+@Tag("OAuth")
 public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
 
-    @Before
+    @BeforeEach
     public void initialize() {
         clearAllServices();
     }
 
     @Test
-    public void verifyClientNoClientId() throws Exception {
+    @SneakyThrows
+    public void verifyClientNoClientId() {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
         mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
         mockRequest.setParameter(OAuth20Constants.CLIENT_SECRET, CLIENT_SECRET);
@@ -83,7 +87,8 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyClientNoAuthorizationCode() throws Exception {
+    @SneakyThrows
+    public void verifyClientNoAuthorizationCode() {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
         mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
@@ -102,7 +107,8 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyClientBadGrantType() throws Exception {
+    @SneakyThrows
+    public void verifyClientBadGrantType() {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
         mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
@@ -142,7 +148,8 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyClientNoClientSecret() throws Exception {
+    @SneakyThrows
+    public void verifyClientNoClientSecret() {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
         mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
@@ -168,8 +175,7 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
         mockRequest.setParameter(OAuth20Constants.CLIENT_SECRET, CLIENT_SECRET);
         mockRequest.setParameter(OAuth20Constants.GRANT_TYPE, OAuth20GrantTypes.AUTHORIZATION_CODE.name().toLowerCase());
         val principal = createPrincipal();
-        val service = addRegisteredService(
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        val service = addRegisteredService(CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
 
         addCode(principal, service);
 
@@ -181,7 +187,8 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyClientNoCasService() throws Exception {
+    @SneakyThrows
+    public void verifyClientNoCasService() {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
         mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
@@ -208,8 +215,7 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
         mockRequest.setParameter(OAuth20Constants.CLIENT_SECRET, CLIENT_SECRET);
         mockRequest.setParameter(OAuth20Constants.GRANT_TYPE, OAuth20GrantTypes.AUTHORIZATION_CODE.name().toLowerCase());
         val principal = createPrincipal();
-        val service = addRegisteredService(
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        val service = addRegisteredService(CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
         val code = addCode(principal, service);
         mockRequest.setParameter(OAuth20Constants.CODE, code.getId());
 
@@ -228,8 +234,7 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
         mockRequest.setParameter(OAuth20Constants.CLIENT_SECRET, WRONG_CLIENT_SECRET);
         mockRequest.setParameter(OAuth20Constants.GRANT_TYPE, OAuth20GrantTypes.AUTHORIZATION_CODE.name().toLowerCase());
         val principal = createPrincipal();
-        val service = addRegisteredService(
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        val service = addRegisteredService(CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
         val code = addCode(principal, service);
         mockRequest.setParameter(OAuth20Constants.CODE, code.getId());
 
@@ -241,23 +246,42 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
+    @SneakyThrows
+    public void verifyClientEmptySecret() {
+        val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
+        mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
+        mockRequest.setParameter(OAuth20Constants.REDIRECT_URI, REDIRECT_URI);
+        mockRequest.setParameter(OAuth20Constants.CLIENT_SECRET, StringUtils.EMPTY);
+        mockRequest.setParameter(OAuth20Constants.GRANT_TYPE, OAuth20GrantTypes.AUTHORIZATION_CODE.name().toLowerCase());
+        val principal = createPrincipal();
+        val service = addRegisteredService(CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE), StringUtils.EMPTY);
+        val code = addCode(principal, service);
+        mockRequest.setParameter(OAuth20Constants.CODE, code.getId());
+
+        val mockResponse = new MockHttpServletResponse();
+        requiresAuthenticationInterceptor.preHandle(mockRequest, mockResponse, null);
+        val mv = controller.handleRequest(mockRequest, mockResponse);
+        assertEquals(HttpStatus.SC_OK, mockResponse.getStatus());
+        assertTrue(mv.getModel().containsKey(OAuth20Constants.ACCESS_TOKEN));
+    }
+
+    @Test
     public void verifyClientExpiredCode() throws Exception {
-        val registeredService = getRegisteredService(REDIRECT_URI, CLIENT_SECRET,
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        val registeredService = getRegisteredService(REDIRECT_URI, CLIENT_SECRET, CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
         servicesManager.save(registeredService);
 
-        val map = new HashMap<String, Object>();
-        map.put(NAME, VALUE);
-        val list = Arrays.asList(VALUE, VALUE);
-        map.put(NAME2, list);
+        val map = new HashMap<String, List<Object>>();
+        map.put(NAME, List.of(VALUE));
+        val list = List.of(VALUE, VALUE);
+        map.put(NAME2, (List) list);
 
         val principal = CoreAuthenticationTestUtils.getPrincipal(ID, map);
         val authentication = getAuthentication(principal);
-        val expiringOAuthCodeFactory = new DefaultOAuthCodeFactory(new AlwaysExpiresExpirationPolicy());
+        val expiringOAuthCodeFactory = new DefaultOAuthCodeFactory(new AlwaysExpiresExpirationPolicy(), servicesManager);
         val factory = new WebApplicationServiceFactory();
         val service = factory.createService(registeredService.getServiceId());
         val code = expiringOAuthCodeFactory.create(service, authentication,
-            new MockTicketGrantingTicket("casuser"), new ArrayList<>(), null, null);
+            new MockTicketGrantingTicket("casuser"), new ArrayList<>(), null, null, CLIENT_ID, new HashMap<>());
         this.ticketRegistry.addTicket(code);
 
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
@@ -277,10 +301,10 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyClientAuthByParameter() throws Exception {
+    public void verifyClientAuthByParameter() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
-        internalVerifyClientOK(service, false);
+        assertClientOK(service, false);
     }
 
     @Test
@@ -306,7 +330,10 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
         devReq.setParameter(OAuth20DeviceUserCodeApprovalEndpointController.PARAMETER_USER_CODE, userCode);
         val devResp = new MockHttpServletResponse();
         val mvDev = deviceController.handlePostRequest(devReq, devResp);
-        assertTrue(mvDev.getStatus().is2xxSuccessful());
+        assertNotNull(mvDev);
+        val status = mvDev.getStatus();
+        assertNotNull(status);
+        assertTrue(status.is2xxSuccessful());
 
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
         mockRequest.setParameter(OAuth20Constants.RESPONSE_TYPE, OAuth20ResponseTypes.DEVICE_CODE.getType());
@@ -320,60 +347,61 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyClientAuthByHeader() throws Exception {
+    public void verifyClientAuthByHeader() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
-        internalVerifyClientOK(service, false);
+        assertClientOK(service, false);
     }
 
     @Test
-    public void verifyClientAuthByParameterWithRefreshToken() throws Exception {
-        val service = addRegisteredService(
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
-        service.setGenerateRefreshToken(true);
-        internalVerifyClientOK(service, true);
-    }
-
-    @Test
-    public void verifyClientAuthByHeaderWithRefreshToken() throws Exception {
+    public void verifyClientAuthByParameterWithRefreshToken() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
         service.setGenerateRefreshToken(true);
-        internalVerifyClientOK(service, true);
+        assertClientOK(service, true);
     }
 
     @Test
-    public void verifyClientAuthJsonByParameter() throws Exception {
-        val service = addRegisteredService(
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
-        internalVerifyClientOK(service, false);
-    }
-
-    @Test
-    public void verifyClientAuthJsonByHeader() throws Exception {
-        val service = addRegisteredService(
-                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
-        internalVerifyClientOK(service, false);
-    }
-
-    @Test
-    public void verifyClientAuthJsonByParameterWithRefreshToken() throws Exception {
+    public void verifyClientAuthByHeaderWithRefreshToken() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
         service.setGenerateRefreshToken(true);
-        internalVerifyClientOK(service, true);
+        assertClientOK(service, true);
     }
 
     @Test
-    public void verifyClientAuthJsonByHeaderWithRefreshToken() throws Exception {
+    public void verifyClientAuthJsonByParameter() {
+        val service = addRegisteredService(
+                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        assertClientOK(service, false);
+    }
+
+    @Test
+    public void verifyClientAuthJsonByHeader() {
+        val service = addRegisteredService(
+                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        assertClientOK(service, false);
+    }
+
+    @Test
+    public void verifyClientAuthJsonByParameterWithRefreshToken() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
         service.setGenerateRefreshToken(true);
-        internalVerifyClientOK(service, true);
+        assertClientOK(service, true);
     }
 
     @Test
-    public void ensureOnlyRefreshTokenIsAcceptedForRefreshGrant() throws Exception {
+    public void verifyClientAuthJsonByHeaderWithRefreshToken() {
+        val service = addRegisteredService(
+                CollectionUtils.wrapSet(OAuth20GrantTypes.AUTHORIZATION_CODE));
+        service.setGenerateRefreshToken(true);
+        assertClientOK(service, true);
+    }
+
+    @Test
+    @SneakyThrows
+    public void ensureOnlyRefreshTokenIsAcceptedForRefreshGrant() {
         addRegisteredService(true, CollectionUtils.wrapSet(OAuth20GrantTypes.PASSWORD,
                 OAuth20GrantTypes.REFRESH_TOKEN));
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
@@ -470,34 +498,35 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyUserAuth() throws Exception {
+    public void verifyUserAuth() {
         addRegisteredService(CollectionUtils.wrapSet(OAuth20GrantTypes.PASSWORD));
-        internalVerifyUserAuth(false);
+        assertUserAuth(false);
     }
 
     @Test
-    public void verifyUserAuthWithRefreshToken() throws Exception {
+    public void verifyUserAuthWithRefreshToken() {
         val registeredService = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.PASSWORD));
         registeredService.setGenerateRefreshToken(true);
-        internalVerifyUserAuth(true);
+        assertUserAuth(true);
     }
 
     @Test
-    public void verifyJsonUserAuth() throws Exception {
+    public void verifyJsonUserAuth() {
         addRegisteredService(CollectionUtils.wrapSet(OAuth20GrantTypes.PASSWORD));
-        internalVerifyUserAuth(false);
+        assertUserAuth(false);
     }
 
     @Test
-    public void verifyJsonUserAuthWithRefreshToken() throws Exception {
+    public void verifyJsonUserAuthWithRefreshToken() {
         val registeredService = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.PASSWORD));
         registeredService.setGenerateRefreshToken(true);
-        internalVerifyUserAuth(true);
+        assertUserAuth(true);
     }
 
-    private void internalVerifyUserAuth(final boolean refreshToken) throws Exception {
+    @SneakyThrows
+    private void assertUserAuth(final boolean refreshToken) {
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
         mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
         mockRequest.setParameter(OAuth20Constants.GRANT_TYPE, OAuth20GrantTypes.PASSWORD.name().toLowerCase());
@@ -525,16 +554,17 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyRefreshTokenExpiredToken() throws Exception {
+    @SneakyThrows
+    public void verifyRefreshTokenExpiredToken() {
         val principal = createPrincipal();
         val registeredService = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.REFRESH_TOKEN));
         val authentication = getAuthentication(principal);
         val factory = new WebApplicationServiceFactory();
         val service = factory.createService(registeredService.getServiceId());
-        val expiringRefreshTokenFactory = new DefaultRefreshTokenFactory(new AlwaysExpiresExpirationPolicy());
+        val expiringRefreshTokenFactory = new DefaultRefreshTokenFactory(new AlwaysExpiresExpirationPolicy(), servicesManager);
         val refreshToken = expiringRefreshTokenFactory.create(service, authentication,
-            new MockTicketGrantingTicket("casuser"), new ArrayList<>());
+            new MockTicketGrantingTicket("casuser"), new ArrayList<>(), CLIENT_ID, new HashMap<>());
         this.ticketRegistry.addTicket(refreshToken);
 
         val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
@@ -566,6 +596,25 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
         val mv = controller.handleRequest(mockRequest, mockResponse);
         assertEquals(HttpStatus.SC_UNAUTHORIZED, mockResponse.getStatus());
         assertEquals(OAuth20Constants.INVALID_REQUEST, mv.getModel().get(OAuth20Constants.ERROR));
+    }
+
+    @Test
+    public void verifyRefreshTokenEmptySecret() throws Exception {
+        val principal = createPrincipal();
+        val service = addRegisteredService(
+                CollectionUtils.wrapSet(OAuth20GrantTypes.REFRESH_TOKEN), StringUtils.EMPTY);
+        val refreshToken = addRefreshToken(principal, service);
+
+        val mockRequest = new MockHttpServletRequest(HttpMethod.GET.name(), CONTEXT + OAuth20Constants.ACCESS_TOKEN_URL);
+        mockRequest.setParameter(OAuth20Constants.GRANT_TYPE, OAuth20GrantTypes.REFRESH_TOKEN.name().toLowerCase());
+        mockRequest.setParameter(OAuth20Constants.CLIENT_ID, CLIENT_ID);
+        mockRequest.setParameter(OAuth20Constants.CLIENT_SECRET, StringUtils.EMPTY);
+        mockRequest.setParameter(OAuth20Constants.REFRESH_TOKEN, refreshToken.getId());
+        val mockResponse = new MockHttpServletResponse();
+        requiresAuthenticationInterceptor.preHandle(mockRequest, mockResponse, null);
+        val mv = controller.handleRequest(mockRequest, mockResponse);
+        assertEquals(HttpStatus.SC_OK, mockResponse.getStatus());
+        assertTrue(mv.getModel().containsKey(OAuth20Constants.ACCESS_TOKEN));
     }
 
     @Test
@@ -612,34 +661,34 @@ public class OAuth20AccessTokenControllerTests extends AbstractOAuth20Tests {
     }
 
     @Test
-    public void verifyRefreshTokenOK() throws Exception {
+    public void verifyRefreshTokenOK() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.REFRESH_TOKEN));
-        internalVerifyRefreshTokenOk(service);
+        assertRefreshTokenOk(service);
     }
 
     @Test
-    public void verifyRefreshTokenOKWithRefreshToken() throws Exception {
+    public void verifyRefreshTokenOKWithRefreshToken() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.REFRESH_TOKEN));
         service.setGenerateRefreshToken(true);
-        internalVerifyRefreshTokenOk(service);
+        assertRefreshTokenOk(service);
     }
 
     @Test
-    public void verifyJsonRefreshTokenOK() throws Exception {
+    public void verifyJsonRefreshTokenOK() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.REFRESH_TOKEN));
 
-        internalVerifyRefreshTokenOk(service);
+        assertRefreshTokenOk(service);
     }
 
     @Test
-    public void verifyJsonRefreshTokenOKWithRefreshToken() throws Exception {
+    public void verifyJsonRefreshTokenOKWithRefreshToken() {
         val service = addRegisteredService(
                 CollectionUtils.wrapSet(OAuth20GrantTypes.REFRESH_TOKEN));
         service.setGenerateRefreshToken(true);
-        internalVerifyRefreshTokenOk(service);
+        assertRefreshTokenOk(service);
     }
 
 }
